fix some layout issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,12 +192,13 @@ h6,
 }
 
 .app-card-container {
+  margin-top: 50px;
   color: #000;
   text-align: left;
 }
 
 .app-card-container > .card {
-  padding: 40px;
+  padding: 20px;
 }
 
 .mail-link {
